# wavegen

./: .gitignore  README.md  fp-lib-table  waveform-generator-cache.lib  waveform-generator.kicad_pcb  waveform-generator.pro
WG.pretty/: AD9837.kicad_mod  SOT-223.kicad_mod
firmware/: ft2232h_prom.xml
hardware/: waveform-generator.cir  waveform-generator.kicad_pcb
hardware/rev1/WG.pretty/: AD9837.kicad_mod  SOT-223.kicad_mod
hardware/rev1/wg-gerber/: wavegen.gbl  wavegen.gbo  wavegen.gbs  wavegen.gml  wavegen.gtl  wavegen.gto  wavegen.gts  wavegen.txt
hardware/rev2/: bom.xlsx  waveform-generator.d356  waveform-generator.kicad_pcb  waveform-generator.pro  waveform-generator.sch
hardware/rev2/WG.pretty/: USB_Micro-B-circular.kicad_mod
hardware/rev2/wavegen-v2/: waveform-generator-Edge.Cuts.gm1  waveform-generator-F.SilkS.gto  waveform-generator-NPTH.drl  waveform-generator.drl
hardware/rev3/: AD9102.lib  Connectors.sch  FTDI.sch  FTDI_EEPROM.sch  LMK61XX.lib  _saved_FTDI_EEPROM.sch  analog.sch  bom.xlsx  fp-lib-table  ltc6269.dcm  ltc6269.lib  ltc6409.dcm  ltc6409.lib  notes.md  power.sch  rev3-cache.lib  rev3.cir  rev3.kicad_pcb  rev3.pro  rev3.sch
hardware/rev3/footprints.pretty/: 3225XO.kicad_mod  7050XO.kicad_mod  AD9102-10LFCSP.kicad_mod  LTC6269-10DFN.kicad_mod  LTC6409-UDB.kicad_mod  ManualVia.kicad_mod  USB_Micro-B-circular.kicad_mod  oshw.kicad_mod
hardware/rev3/gerbers/: .gitignore  rev3-B.Cu.gbl  rev3-B.Mask.gbs  rev3-B.SilkS.gbo  rev3-Edge.Cuts.gm1  rev3-F.Cu.gtl  rev3-F.Mask.gts  rev3-F.SilkS.gto  rev3-In1.Cu.g2  rev3-In2.Cu.g3  rev3.drl  seeedstudio.ps1
hardware/rev3/ltspice/: output_amp.asc
hardware/wavegen-v2/: waveform-generator-F.Cu.gtl  waveform-generator-F.Mask.gts
software/: .gitignore  CMakeLists.txt
software/cmake/: FindFTD2XX.cmake  FindFTDI.cmake  FindMPSSE_SPI.cmake  GitVersion.cmake
software/wavegen/: .gitignore  CMakeLists.txt  ad9837.cpp  ad9837.h  exceptions.h  ft2232h-spi-d2xx.cpp  ft2232h-spi-libftdi.cpp  ft2232h-spi-libmpsse-spi.cpp  ft2232h-spi.h  make-version.sh  packet-detail.h  packet.cpp  packet.h  util.h  version.cpp.in  version.h  wavegen.cpp  wavegen.h
software/wavegen-python/: .gitignore  CMakeLists.txt  pywavegen.cpp  pywavegen_gui.pyw  pywavegen_gui.ui  pywavegen_gui_uic.py
software/wavegen-test/: .gitignore  CMakeLists.txt  wavegen-test.cpp
wavegen-v2/: waveform-generator-B.Cu.gbl  waveform-generator-B.Mask.gbs  waveform-generator-B.SilkS.gbo  waveform-generator.d356
